--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -37,6 +37,7 @@ limitations under the License.
            <form action="/">
                <button type="submit">Throw pigs</button>
            </form>
+           <a href="/accounts/logout/">Log Out</a>
     </div>
 
  </div>
