--- a/polls/templates/polls/game-over.html
+++ b/polls/templates/polls/game-over.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
+{% extends 'polls/base.html' %}
+{% block content %}
+
     <p>Game over! You scored {{ score }}</p>
-<form action="/">
-  <button type="submit">Back to game</button>
-</form>
-    <h1>High Scores!</h1>
-{% for score in high_scores %}
-   <p>{{ score.user.username }}: {{ score.min_count }}</p>
-{% endfor %}
-</body>
-</html>
+
+
+{% endblock %}
