--- a/polls/templates/registration/login.html
+++ b/polls/templates/registration/login.html
@@ -1,9 +1,30 @@
 
-<h1>PASS THE PIGGIES!</h1>
+<head>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <style>
+    * {
+      font-family: "Comic Sans MS", sans-serif;
+      text-align: center;
+    }
+
+    body {
+    background-color: pink;
+    }
+
+    .pig {
+      color: rgb(255,0,212);
+    }
+  </style>
+</head>
+
+<body>
+<h1>PASS THE <span class="pig">PIGGIES</span>!</h1>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button class="btn btn-info" type="submit">Log In</button>
 </form>
 <h4>Don't have an account?</h4>
 <a href="{% url 'polls:sign_up' %}">Sign up here</a>
+<body>
