--- a/polls/templates/registration/sign_up.html
+++ b/polls/templates/registration/sign_up.html
@@ -1,10 +1,44 @@
+
+
+<head>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<style>
+    * {
+      font-family: "Comic Sans MS", sans-serif;
+    }
+
+    body {
+    background-color: pink;
+    }
+
+    .pig {
+      color: rgb(255,0,212);
+    }
+
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 20%;
+    }
+
+    h1 {
+      font-size: 28px;
+    }
+  </style>
+</head>
+
+<body>
+<div class="center">
 <h1>Welcome New Player!</h1>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Sign Up</button>
+  <button class="btn btn-info" type="submit">Sign Up</button>
 </form>
-<form action="/">
-  <button type="submit">Back to login</button>
+<form action="{% url 'polls:start-game' %}">
+  <button class="btn btn-info" type="submit">Back to login</button>
 </form>
-
+</div>
+</body>
